--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
@@ -21,6 +21,12 @@
     - The freeCodeCamp Team
 
     -->
-    <script  src="js/index.js"></script>
+
+    <div id="main">
+      <h1 id="title">Tribute Page</h1>
+      <figure id="img-div"></figure>
+    </div>
+
+    <script src="js/index.js"></script>
   </body>
 </html>
